--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: project_3
+name: bookbode
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,8 @@ dependencies:
   bloc: ^8.1.2
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
+  flutter_appauth: ^6.0.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
