--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   page_transition: ^2.0.9
   flutter_appauth: ^6.0.2
   crypto: ^3.0.3
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
