--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_appauth: ^6.0.2
   crypto: ^3.0.3
   flutter_bloc: ^8.1.3
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
