--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^5.1.0
   uuid: ^3.0.7
   intl: ^0.18.1
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
